java 9 examples