@@ -12,5 +12,19 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
-    
+
+
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
+        <configuration>
+            <source>9</source>
+            <target>9</target>
+            <compilerArgs>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.httpclient</arg>
+            </compilerArgs>
+        </configuration>
+    </plugin>
+
 </project>
